--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,5 @@
 *~
 target/*
 src/main/resources/semafor_models/*
-**/.idea/workspace.xml
-**/.idea/tasks.xml
-**/.idea/libraries/
+**/.idea
+**.iml
