--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,23 @@
             <artifactId>weka-stable</artifactId>
             <version>3.8.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-ui</artifactId>
+            <version>0.4-rc3.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-nlp</artifactId>
+            <version>0.4-rc3.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.nd4j</groupId>
+            <artifactId>nd4j-x86</artifactId>
+            <version>0.4-rc3.8</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
